syntax = "proto3";
package common;
option go_package = "skatechain.org/api/pb/common";

message OperatorSignature {
  string address = 1;
  bytes signature = 2;
}
